# sail-on-client

./: .buildinfo  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .mypy.ini  LICENSE  M12-Algo.md  M18-Algo.md  M6-ALGO.md  MANIFEST.in  Pipfile  README.md  api.html  codecov.yml  conftest.py  genindex.html  index.html  objects.inv  plugins.html  py-modindex.html  pyproject.toml  requirements.txt  saving.html  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: api.doctree  environment.pickle  index.doctree  plugins.doctree  saving.doctree
.doctrees/agents/: agents.doctree  agents_api.doctree
.doctrees/feedback/: feedback.doctree  feedback_api.doctree
.doctrees/harness/: harness.doctree  harness_api.doctree
.doctrees/hydra/: cli.doctree  config.doctree  hydra_plugins.doctree  motivation.doctree
.doctrees/interfaces/: interface.doctree  interface_api.doctree  localinterface.doctree  parinterface.doctree
.doctrees/metrics/: metric_api.doctree  metric_formulation.doctree
.doctrees/plugins/: agents.doctree  agents_api.doctree  hydra_plugins.doctree  plugins.doctree
.doctrees/protocols/: condda.doctree  ond.doctree  protocol_api.doctree
.doctrees/saving/: checkpoint.doctree  checkpoint_api.doctree  features.doctree
.doctrees/user/: cli.doctree  install.doctree  running_algorithms.doctree
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml
_modules/: index.html
_modules/sail_on_client/: checkpointer.html
_sources/: api.rst.txt  index.rst.txt
_sources/agents/: agents.rst.txt
_sources/feedback/: feedback.rst.txt  feedback_api.rst.txt
_sources/hydra/: config.rst.txt
_sources/metrics/: metric_api.rst.txt
_sources/plugins/: agents_api.rst.txt  plugins.rst.txt
_sources/protocols/: protocol_api.rst.txt
_sources/saving/: checkpoint.rst.txt  checkpoint_api.rst.txt
_sources/user/: install.rst.txt  running_algorithms.rst.txt
_static/: documentation_options.js
agents/: agents.html  agents_api.html
config/: condda_12_with_rd_nd.json  condda_12_wo_rd_nd.json  condda_5_14_a1_nd.json  condda_5_14_a1_nd_pfact.json  condda_5_14_a2_nd.json  condda_5_14_a2_nd_pfact.json  evm_nd.json  gae_kl_nd_precomputed.json  gae_nd.json  gae_nd_fe.json  gae_nd_graph_fe.json  gae_nd_graph_precomputed.json  gae_nd_i3d_fe.json  gae_nd_i3d_fs.json  gae_nd_rd.json  gae_nd_rd_graph_precomputed.json  hwr_config.yaml  hwr_nd.json  ond_12_with_rd_nd.json  ond_12_with_rd_nd_restore.json  ond_12_with_rd_nd_save.json  ond_12_with_rd_nd_wo_feedback.json  ond_12_without_rd_nd.json  ond_12_without_rd_nd_restore.json  ond_12_without_rd_nd_save.json  ond_12_wo_rd_nd.json  ond_12_wo_rd_nd_wo_feedback.json  ond_5_14_a1_nd.json  ond_5_14_a2_nd.json
config/m6/: condda_5_14_a1_nd.json  condda_5_14_a2_nd.json  condda_5_14_given_detection.yaml  condda_5_14_system_detection.yaml  ond_5_14_a1_nd.json  ond_5_14_given_detection.yaml  ond_5_14_system_detection.yaml
config/test/: test_config.yaml
docs/source/: api.rst  conf.py  index.rst  plugins.rst
docs/source/user/: cli.rst  (+2 more)
feedback/: feedback.html  feedback_api.html
harness/: harness.html  harness_api.html
hydra/: cli.html  config.html  hydra_plugins.html  motivation.html
hydra_plugins/: __init__.py  additional_searchpath.py
hydra_plugins/test/: __init__.py  test_config.yaml
interfaces/: interface.html  interface_api.html  localinterface.html  parinterface.html
merge_framework/errors/: errors.py
merge_framework/protocol/: condda.py  condda_config.py  ond_config.py  ond_protocol.py  parinterface.py
metrics/: metric_api.html  metric_formulation.html
plugins/: agents.html  agents_api.html  hydra_plugins.html  plugins.html
protocols/: condda.html  ond.html  protocol_api.html
sail-on/protocol/: ond_config.py  ond_protocol.py  sail-on_protocol.py
sail_on/protocol/: .gitignore  configuration.json  ond_config.py  ond_postprocess.py  ond_protocol.py  parinterface.py
sail_on_client/: __init__.py  _version.py  aggregate_features.py  checkpointer.py  client_launcher.py  mock.py  pre_computed_detector.py  utils.py
sail_on_client/agent/: __init__.py  condda_agent.py  mock_condda_agents.py  mock_ond_agents.py  ond_agent.py  ond_reaction_agent.py  pre_computed_detector.py  pre_computed_reaction_agent.py  visual_agent.py
sail_on_client/configs/: __init__.py  default.yaml
sail_on_client/errors/: __init__.py  errors.py
sail_on_client/evaluate/: __init__.py  activity_recognition.py  document_transcription.py  image_classifcation.py  image_classification.py  metrics.py  program_metrics.py  utils.py
sail_on_client/feedback/: __init__.py  activity_recognition_feedback.py  document_transcription_feedback.py  feedback.py  image_classification_feedback.py
sail_on_client/harness/: __init__.py  constants.py  file_provider.py  file_provider_fn.py  local_harness.py  par_harness.py  test_and_evaluation_harness.py
saving/: checkpoint.html  checkpoint_api.html  features.html
tests/: __init__.py  activity_recognition_metric_values.py  assumptions.json  conftest.py  helpers.py  image_classification_metric_values.py  test_activity_recognition_feedback.py  test_activity_recognition_metrics.py  test_aggregate_features.py  test_checkpointer.py  test_client_launcher.py  test_condda.py  test_condda_dataclasses.py  test_condda_round.py  test_condda_test.py  test_decorators.py  test_document_transcription_feedback.py  test_evaluate.py  test_evaluate_utils.py  test_feedback.py  test_image_classification_feedback.py  test_image_classification_metrics.py  test_local_harness.py  test_localinterface.py  test_metrics.py  test_ond.py  test_ond_dataclasses.py  test_ond_protocol.py  test_ond_round.py  test_ond_test.py  test_par_harness.py  test_parinterface.py  test_precomputed_detector.py  test_results_CONDDA.1.1.1234.csv  test_searchpath_plugin.py  test_transcription_metrics.py  test_utils.py  test_visual_dataclasses.py  transcription_metric_values.py
user/: cli.html  install.html  running_algorithms.html
(+227 files in other folders)
