[tool.poetry]
name = "sail-on-client"
version = "0.15.0+29.7963669"
description = "Client and Protocols for DARPA sail-on"
authors = ["Ameya Shringi <ameya.shringi@kitware.com>",
           "Christopher Funk <christopher.funk@kitware.com>",
           "Roni Choudhury <roni.choudhury@kitware.com>",
           "Adam Kaufman <adam_kaufman@partech.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "sail_on_client"}]

[tool.poetry.dependencies]
python = "^3.7"
scriptconfig = "0.5.6"
numpy = ">=1.18.3"
pandas = ">=1.0.3"
requests = ">=2.23.0"
importlib-metadata = ">=1.6.0"
ubelt = "==0.9.2"
torch = "^1.6.0"
nltk = "3.5" # Retaining nltk since anything above 3.5 is broken until https://github.com/nltk/nltk/pull/2720 is released
tenacity = "^7.0.0"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]
flake8 = ">=3.7"
flake8-black = "==0.2.0"
flake8-bugbear = ">=20.1"
flake8-builtins = ">=1.5"
flake8-comprehensions = ">=3.2"
flake8-docstrings = ">=1.5"
flake8-eradicate = "==0.3.0"
flake8-mutable = ">=1.2"
flake8-mypy = ">=17.8"
flake8-polyfill = ">=1.0"
flake8-quotes = ">=3.0"
pep8-naming = "==0.10.0"
black = "==19.10b0"
pytest = ">=6.0.1"
coverage = ">=5.2.1"
sphinx-press-theme = "==0.5.1"
sphinx-autodoc-typehints = ">=1.11.0"
Sphinx = ">=3.2.1"
types-pkg-resources = "^0.1.3"
types-requests = "^2.25.0"
types-six = "^0.1.7"
types-toml = "^0.1.3"

[tool.poetry.plugins."tinker_test"]
MockDetector = "sail_on_client.mock:MockDetector"
PreComputedDetector = "sail_on_client.pre_computed_detector:PreComputedDetector"
BaselinePreComputedDetector = "sail_on_client.pre_computed_detector:PreComputedDetector"

[tool.poetry.plugins."tinker"]
MockDetector = "sail_on_client.mock:MockDetector"
PreComputedDetector = "sail_on_client.pre_computed_detector:PreComputedDetector"

[build-system]
requires = ["setuptools", "poetry-core==1.0.4", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
