[tool.poetry]
name = "sail-on-client"
version = "0.25.0"
description = "Client and Protocols for DARPA sail-on"
authors = ["Ameya Shringi <ameya.shringi@kitware.com>",
           "Christopher Funk <christopher.funk@kitware.com>",
           "Roni Choudhury <roni.choudhury@kitware.com>",
           "Adam Kaufman <adam_kaufman@partech.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "sail_on_client"}]

[tool.poetry.dependencies]
python = "^3.7"
scriptconfig = "0.5.6"
numpy = ">=1.18.3"
pandas = ">=1.0.3"
requests = ">=2.23.0"
importlib-metadata = ">=1.6.0"
ubelt = "==0.9.2"
torch = "^1.6.0"
tenacity = "^7.0.0"
matplotlib = "^3.2.2"
hydra-core = "^1.1.1"
hydra-colorlog = "^1.1.0"
nltk = "^3.6.7"
types-dataclasses = "^0.6.4"
tinker-engine = "^0.10"

[tool.poetry.dev-dependencies]
flake8 = ">=3.7"
flake8-black = "==0.2.0"
flake8-bugbear = ">=20.1"
flake8-builtins = ">=1.5"
flake8-comprehensions = ">=3.2"
flake8-docstrings = ">=1.5"
flake8-eradicate = "==0.3.0"
flake8-mutable = ">=1.2"
flake8-mypy = ">=17.8"
flake8-polyfill = ">=1.0"
flake8-quotes = ">=3.0"
pep8-naming = "==0.10.0"
black = "==19.10b0"
pytest = ">=6.0.1"
coverage = ">=5.2.1"
sphinx-press-theme = "==0.5.1"
sphinx-autodoc-typehints = ">=1.11.0"
Sphinx = ">=3.2.1"
types-pkg-resources = "^0.1.3"
types-requests = "^2.25.0"
types-six = "^0.1.7"
types-toml = "^0.1.3"


[tool.poetry.plugins.smqtk_plugins]
ONDProtocol = "sail_on_client.protocol.ond_protocol"
CONDDAProtocol = "sail_on_client.protocol.condda_protocol"
LocalHarness = "sail_on_client.harness.local_harness"
ParHarness = "sail_on_client.harness.par_harness"
MockONDAgent = "sail_on_client.agent.mock_ond_agents"
MockCONDDAAgent = "sail_on_client.agent.mock_condda_agents"
PreComputedAgent = "sail_on_client.agent.pre_computed_detector"
PreComputedReactionAgent = "sail_on_client.agent.pre_computed_reaction_agent"


[build-system]
requires = ["setuptools", "poetry-core==1.0.4"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sail-on-client = "sail_on_client.client_launcher:client_launcher"
